@@ -29,8 +29,14 @@ MainObject::MainObject(QObject *parent)
   : QObject(parent)
 {
   test_server=new WHHttpServer(this);
+  connect(test_server,
+	  SIGNAL(newSocketConnection(int,const QString &,const QString &)),
+	  this,
+	  SLOT(newSocketConnectionData(int,const QString &,const QString &)));
   connect(test_server,SIGNAL(socketMessageReceived(int,WHSocketMessage *)),
 	  this,SLOT(socketMessageReceivedData(int,WHSocketMessage *)));
+  connect(test_server,SIGNAL(socketConnectionClosed(int)),
+	  this,SLOT(socketConnectionClosedData(int)));
   if(!test_server->listen(8080)) {
     fprintf(stderr,"httpserver: unable to bind port 8080\n");
     exit(256);
@@ -39,7 +45,16 @@ MainObject::MainObject(QObject *parent)
 			       "/home/fredg/temp/websock.js");
   test_server->addStaticSource("/websock.html","text/html",
 			       "/home/fredg/temp/websock.html");
+  test_server->addSocketSource("/myconn","chat");
   printf("listening on port 8080\n");
+}
+
+
+void MainObject::newSocketConnectionData(int id,const QString &uri,
+					 const QString &proto)
+{
+  printf("%d: new WebSocket: uri: %s  proto: %s\n",id,
+	 (const char *)uri.toUtf8(),(const char *)proto.toUtf8());
 }
 
 
@@ -47,6 +62,12 @@ void MainObject::socketMessageReceivedData(int id,WHSocketMessage *msg)
 {
   printf("%d: %s\n",id,msg->payload().constData());
   test_server->sendSocketMessage(id,QString("I got that!"));
+}
+
+
+void MainObject::socketConnectionClosedData(int id)
+{
+  printf("%d: WebSocket disconnected\n",id);
 }
 
 
