@@ -247,3 +247,7 @@
 	from 'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
 2016-02-26 Fred Gleason <fredg@paravelsystems.com>
 	* Implemented basic WebSocket support.
+2016-02-26 Fred Gleason <fredg@paravelsystems.com>
+	* Added 'WHHttpServer::newSocketConnection()' and
+	'WHHttpServer::socketConnectionClosed()' signals in
+	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
